--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <script type="text/javascript" src="lib/phaser.js"></script>
+  
   <script type="text/javascript" src="script/game.js"></script>
+  <script type="text/javascript" src="script/players.js"></script>
   
   <style type="text/css">
         body {
@@ -21,5 +23,6 @@
   </head>
 <body>
   <div id="gameContainer"></div>
+  <script src="script/game.js"></script>
   </body>
 </html>
