--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <script type="text/javascript" src="script/game.js"></script>
   <script type="text/javascript" src="script/players.js"></script>
+  <script type="text/javascript" src="script/recipe.js"></script>
   
   <style type="text/css">
         body {
