win points and lose condition (time over)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html> 
 <html>
 <head>
-  <title>asdf</title> <!-- todo change title -->
+  <title>dueto de la konstelacioj</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Game"> <!-- todo change -->
+  <meta name="description" content="Cooperative local web game for two players. The game can only be interacted with using two keys, one per player.">
   <meta name="keywords" content="JavaScript, Phaser, Itch.io, GGJ, duality, game">
   <meta name="authors" content="María Ranera, Fen Nicolás">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="script/game.js"></script>
   <script type="text/javascript" src="script/players.js"></script>
   <script type="text/javascript" src="script/recipe.js"></script>
+  <script type="text/javascript" src="script/winlose.js"></script>
   
   <style type="text/css">
         body {
